Closure_114/evosuite/original/evosuite-report-org/test_build_org.log
cd /home/liumengjiao/Desktop/CI/Benchmark/../bugs/Closure_114_buggy && timeout 300000 javac -cp  /home/liumengjiao/Desktop/defects4j/framework/lib/test_generation/generation/evosuite-current.jar:build/classes/:lib/*  /home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/3/com/google/javascript/jscomp/NameAnalyzer_ESTest_scaffolding.java /home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/3/com/google/javascript/jscomp/NameAnalyzer_ESTest.java >> evosuite-report-org/test_build_org.log 2>&1

/home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/3/com/google/javascript/jscomp/NameAnalyzer_ESTest.java:27: error: cannot find symbol
      assertEquals(53, Node.INPUT_ID);
                           ^
  symbol:   variable INPUT_ID
  location: class Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/3/com/google/javascript/jscomp/NameAnalyzer_ESTest.java:48: error: cannot find symbol
      assertFalse(node0.isLabel());
                       ^
  symbol:   method isLabel()
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/3/com/google/javascript/jscomp/NameAnalyzer_ESTest.java:73: error: cannot find symbol
      assertFalse(node0.isArrayLit());
                       ^
  symbol:   method isArrayLit()
  location: variable node0 of type Node
/home/liumengjiao/Desktop/CI/Evosuite/Closure_114/Closure/evosuite/3/com/google/javascript/jscomp/NameAnalyzer_ESTest.java:83: error: cannot find symbol
      assertFalse(node0.isGetProp());
                       ^
  symbol:   method isGetProp()
  location: variable node0 of type Node
4 errors
